Fix icon color on dark mode

--- a/webpages/settings/style.css
+++ b/webpages/settings/style.css
@@ -809,3 +809,7 @@ input[type="color"]::-webkit-color-swatch {
 #screenshot {
   height: 10rem;
 }
+
+.invert {
+  filter: brightness(0) invert(1);
+}
